css/styles.css
html,
body,
.offcanvas,
.modal-content,
.card {
  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  background-color: #36454F !important;
  color: #f7f7f7 !important;
  -webkit-box-sizing: border-box;
  /* Safari/Chrome, other WebKit */
  -moz-box-sizing: border-box;
  /* Firefox, other Gecko */
  box-sizing: border-box;
  /* Opera/IE 8+ */
}

.subtle-text {
  color: #cfcfcf !important
}

*,
*:before,
*:after {
  -webkit-box-sizing: inherit;
  /* Safari/Chrome, other WebKit */
  -moz-box-sizing: inherit;
  /* Firefox, other Gecko */
  box-sizing: inherit;
  /* Opera/IE 8+ */
}

.bg-img-cover {
  margin: 0;
  padding: 0;
  background-color: transparent;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  border-radius: 0.5rem;
  border-top: 0.25rem solid transparent;
  border-bottom: 0.25rem solid transparent;
  height: 100%;
}

input[type="radio"]:checked~.bg-img-cover {
  border: 0.25rem solid #0d6efd;
}

.btn-round {
  border-radius: 5em;
}

.modal-header {
  border-bottom: none;
}

.modal-footer {
  border-top: none;
}

.dropdown-toggle::after {
  content: none;
}

.dropdown {
  position: static !important;

}

input[type="range"][orient="vertical"] {
  transform: rotate(90deg);
  -webkit-transform: rotate(90deg);
}

input[type="range"][orient="vertical"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  margin-top: -6px;
  background-color: #f7f7f7;
  border-radius: 0.25rem;
  height: 1rem;
  width: 0.33rem;
}


input[type="range"] {
  -webkit-appearance: none;
  display: block;
  appearance: none;
  background: transparent;
  cursor: pointer;
}

input[type="range"]::-webkit-slider-runnable-track {
  background: #f7f7f7;
  border-radius: 0.33rem;
  height: 0.25rem;
}

input[type="range"]::-moz-range-track {
  background: #f7f7f7;
  border-radius: 0.33rem;
  height: 0.25rem;
}

input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  margin-top: -6px;
  background-color: #f7f7f7;
  border-radius: 0.25rem;
  height: 1rem;
  width: 0.33rem;
}
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

.bootstrap-tagsinput {
  /* "form-control form-control-sm" */
  display: block;
  width: 100%;
  font-weight: 400;
  line-height: 1.5;
  background-clip: padding-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 0.25rem;
  transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
  min-height: calc(1.5em +(0.5rem + 2px));
  padding: 0.25rem 0.5rem;
  font-size: .875rem;
}

#input-party-link {
  background-color: #fff;
  font-size: 0.8em;
}

.scene-label,
.player-label, .draggable-modal {
  cursor: pointer;
}

#modal-grid {
  position: relative;
}

.popover-header {
  color: black;
}

.draggable-modal {
  position: fixed;
  width: 100%;
  margin: 0;
  padding: 10px;
}

.offcanvas {
  visibility: visible !important;
}

.aura-only {
  display: none;
}

.menu-btn {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.bottom-btn {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.bootstrap-tagsinput .tag {
  font-size: 0.95em;
  color: #f9f9f9;
  background-color: #880808;
  border-radius: 0.2em;
  padding: 0 2px 0 2px;
}

.video-background {
  z-index: -100 !important;
}

.drawer {
  height: 0;
  bottom: 0;
  right: 2em;
  position: fixed;
  transition: 0.27s;
  background: #5c636a;
}

.no-focus {
  box-shadow: none !important;
}

.grid-indicator {
  border: 1px dashed;
}

.grid-mode-overlay {
    /* Add the blur effect */
  box-shadow: #5f8585 0px 2px 8px;
  text-align: center;
  background-color: #eaf0f0;
  color: #5f8585;
  z-index: 1059;
  opacity: 0.6;
  font-size: 20px;
  width: 100%;
  position: absolute;
}

.menu-toggle {
  width: 2.4em;
  position: absolute;
  height: 100vh;
}

.shake {
  -webkit-animation: shake 1.64s cubic-bezier(.36, .07, .19, .97) infinite;
  -moz-animation: shake 1.64s cubic-bezier(.36, .07, .19, .97) infinite;
  -o-animation: shake 1.64s cubic-bezier(.36, .07, .19, .97) infinite;
  animation: shake 1.64s cubic-bezier(.36, .07, .19, .97) infinite;
  transform: translate3d(0, 0, 0);
  perspective: 1000px;
}

@keyframes shake {

  5%,
  45% {
    transform: translate3d(-1px, 0, 0);
  }

  10%,
  40% {
    transform: translate3d(2px, 0, 0);
  }

  15%,
  25%,
  35% {
    transform: translate3d(-4px, 0, 0);
  }

  20%,
  30% {
    transform: translate3d(4px, 0, 0);
  }
}

.blinking {
  -webkit-animation: blinkingAnimation 1.8s infinite;
  /* Safari 4+ */
  -moz-animation: blinkingAnimation 1.8s infinite;
  /* Fx 5+ */
  -o-animation: blinkingAnimation 1.8s infinite;
  /* Opera 12+ */
  animation: blinkingAnimation 1.8s infinite;
  /* IE 10+, Fx 29+ */
}

@keyframes blinkingAnimation {
  0% {
    background-color: transparent;
  }

  6% {
    background-color: #eaf0f0b0;
  }

  29% {
    background-color: transparent;
  }

  35% {
    background-color: #eaf0f0b0;
  }

  58% {
    background-color: transparent;
  }
}

